--- a/Abgabe1/sheet01.ipynb
+++ b/Abgabe1/sheet01.ipynb
@@ -819,7 +819,33 @@
    "id": "132d8c01",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mu_x = abs(np.mean(controlPost) - np.mean(controlPre))\n",
+    "mu_y = abs(np.mean(interPost) - np.mean(interPre))\n",
+    "\n",
+    "\n",
+    "sig_x = abs(np.std(controlPost) - np.std(controlPre))\n",
+    "sig_y = abs(np.std(interPost) - np.std(interPre))\n",
+    "\n",
+    "d = abs(mu_x - mu_y) / (np.sqrt(sig_x**2 + sig_y**2))\n",
+    "\n",
+    "if 0.01 < d <= 0.2:\n",
+    "    interpretation = \"very small\"\n",
+    "elif 0.2 < d <= 0.5:\n",
+    "    interpretation = \"small\"\n",
+    "elif 0.5 < d <= 0.8:\n",
+    "    interpretation = \"moderate\"\n",
+    "elif 0.8 < d <= 1.2:\n",
+    "    interpretation = \"large\"\n",
+    "elif 1.2 < d <= 2.0:\n",
+    "    interpretation = \"very large\"\n",
+    "else:\n",
+    "    interpretation = \"huge\"\n",
+    "\n",
+    "\n",
+    "print(f\"d: {d}\")\n",
+    "print(f\"Interpretation: {interpretation}\")"
+   ]
   },
   {
    "cell_type": "markdown",
