--- a/Abgabe1/sheet01.ipynb
+++ b/Abgabe1/sheet01.ipynb
@@ -827,7 +827,7 @@
     "sig_x = abs(np.std(controlPost) - np.std(controlPre))\n",
     "sig_y = abs(np.std(interPost) - np.std(interPre))\n",
     "\n",
-    "d = abs(mu_x - mu_y) / (np.sqrt(sig_x**2 + sig_y**2))\n",
+    "d = abs(mu_x - mu_y) / (np.sqrt(0.5 * (sig_x**2 + sig_y**2)))\n",
     "\n",
     "if 0.01 < d <= 0.2:\n",
     "    interpretation = \"very small\"\n",
