--- a/Abgabe1/sheet01.ipynb
+++ b/Abgabe1/sheet01.ipynb
@@ -824,8 +824,8 @@
     "mu_y = abs(np.mean(interPost) - np.mean(interPre))\n",
     "\n",
     "\n",
-    "sig_x = abs(np.std(controlPost) - np.std(controlPre))\n",
-    "sig_y = abs(np.std(interPost) - np.std(interPre))\n",
+    "sig_x = np.std(controlPre)\n",
+    "sig_y = np.std(interPre)\n",
     "\n",
     "d = abs(mu_x - mu_y) / (np.sqrt(0.5 * (sig_x**2 + sig_y**2)))\n",
     "\n",
