--- a/Abgabe1/sheet01.ipynb
+++ b/Abgabe1/sheet01.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d0d93f7c",
    "metadata": {},
    "outputs": [
@@ -267,83 +267,6 @@
     "X[:,2][nanPreInter] = int(interPre.mean())\n",
     "X[:,3][nanPostControl] = int(controlPost.mean())\n",
     "X[:,3][nanPostInter] = int(interPost.mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "80cf2fb0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0., 27., 40.],\n",
-       "       [ 1.,  0., 31., 34.],\n",
-       "       [ 2.,  0., 30., 40.],\n",
-       "       [ 3.,  0., 20., 40.],\n",
-       "       [ 4.,  0., 41., 54.],\n",
-       "       [ 5.,  0., 39., 51.],\n",
-       "       [ 6.,  0., 20., 33.],\n",
-       "       [ 7.,  0., 27., 36.],\n",
-       "       [ 9.,  0., 33., 46.],\n",
-       "       [10.,  0., 22., 29.],\n",
-       "       [11.,  0., 22., 41.],\n",
-       "       [12.,  0., 29., 40.],\n",
-       "       [13.,  0., 25., 40.],\n",
-       "       [14.,  0., 41., 47.],\n",
-       "       [15.,  0., 23., 36.],\n",
-       "       [16.,  0., 17., 30.],\n",
-       "       [18.,  0., 34., 40.],\n",
-       "       [19.,  0., 23., 27.],\n",
-       "       [20.,  0., 48., 53.],\n",
-       "       [21.,  0., 19., 26.],\n",
-       "       [22.,  0., 28., 33.],\n",
-       "       [23.,  0., 38., 46.],\n",
-       "       [24.,  0., 22., 34.],\n",
-       "       [25.,  0., 34., 45.],\n",
-       "       [26.,  0., 36., 49.],\n",
-       "       [27.,  0., 33., 47.],\n",
-       "       [28.,  0., 40., 41.],\n",
-       "       [29.,  0., 39., 52.],\n",
-       "       [30.,  1., 24., 50.],\n",
-       "       [31.,  1., 38., 62.],\n",
-       "       [32.,  1., 34., 51.],\n",
-       "       [33.,  1., 37., 50.],\n",
-       "       [34.,  1., 31., 44.],\n",
-       "       [35.,  1., 37., 57.],\n",
-       "       [36.,  1., 25., 50.],\n",
-       "       [37.,  1., 23., 37.],\n",
-       "       [38.,  1., 12., 38.],\n",
-       "       [39.,  1., 31., 56.],\n",
-       "       [40.,  1., 36., 46.],\n",
-       "       [41.,  1., 34., 48.],\n",
-       "       [43.,  1., 41., 59.],\n",
-       "       [44.,  1., 14., 37.],\n",
-       "       [45.,  1.,  7., 29.],\n",
-       "       [46.,  1., 30., 54.],\n",
-       "       [47.,  1., 42., 62.],\n",
-       "       [48.,  1., 25., 44.],\n",
-       "       [49.,  1., 29., 53.],\n",
-       "       [50.,  1., 17., 40.],\n",
-       "       [51.,  1., 40., 63.],\n",
-       "       [52.,  1., 29., 46.],\n",
-       "       [53.,  1., 33., 50.],\n",
-       "       [54.,  1., 24., 50.],\n",
-       "       [55.,  1., 38., 53.],\n",
-       "       [56.,  1., 26., 48.],\n",
-       "       [57.,  1., 41., 50.],\n",
-       "       [58.,  1., 37., 65.],\n",
-       "       [59.,  1., 41., 61.]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X"
    ]
   },
   {
@@ -892,7 +815,39 @@
    "id": "7757c619",
    "metadata": {},
    "source": [
-    "**ANSWER**"
+    "**ANSWER**\n",
+    "\n",
+    "__Model a random variable $Z$ that indicates whether the student understood the topic or not. What is the domain? What is the probability mass function $p_Z$? What are the parameters of this function?__\n",
+    "\n",
+    "---\n",
+    "\n",
+    "We can model the random variable $Z$ as a binary variable with a domain of {0,1} where 0 stands for \"did not understand\" and 1 for \"understood\". We can then define the probability mass function $p_Z$ as follows:\n",
+    "\n",
+    "$P(Z = 0) = p$\n",
+    "\n",
+    "$P(Z = 1) = 1-p$\n",
+    "\n",
+    "p is the probability of not understanding the topic.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "__Model a random variable $X$ for the number of points the student achieves on the test. What is the conditional probability density function $p_{X|Z}$? What are the parameters of this function?__\n",
+    "\n",
+    "---\n",
+    "\n",
+    "We can model X as a gaussian distribution with a mean that depends on the value of $Z$.\n",
+    "\n",
+    "Case 1: *The student did not unterstand the topic*\n",
+    "\n",
+    "$p(X | Z = 0) = \\frac{1}{\\sigma_0 \\sqrt{2\\pi}} e^{-\\frac{(x - \\mu_0)^2}{2\\sigma_0^2}} $\n",
+    "\n",
+    "with Parameters $\\sigma_0$ for the standard deviation and $\\mu_0$ for the mean. Both parameters only consider the data of where Case 1 occurs. \n",
+    "\n",
+    "Case 2: *The student did understand the topic*\n",
+    "\n",
+    "$p(X | Z = 1) = \\frac{1}{\\sigma_1 \\sqrt{2\\pi}} e^{-\\frac{(x - \\mu_1)^2}{2\\sigma_1^2}}$\n",
+    "\n",
+    "with Parameters $\\sigma_1$ for the standard deviation and $\\mu_1$ for the mean. Both parameters only consider the data of where Case 2 occurs. \n"
    ]
   },
   {
@@ -910,7 +865,15 @@
    "id": "42722ba8",
    "metadata": {},
    "source": [
-    "**ANSWER**"
+    "**ANSWER**\n",
+    "\n",
+    "The Bayes theorem: \n",
+    "\n",
+    "$p(A|B) = \\frac{p(B|A) \\cdot p(A)}{p(B)}$\n",
+    "\n",
+    "For the students who understood the topic:\n",
+    "\n",
+    "$p_{Z|X}(1|x) = \\frac{p_{X|Z}(x|1) \\cdot p_Z(1)}{p_X(x)}$\n"
    ]
   },
   {
@@ -951,7 +914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
