--- a/Abgabe1/sheet01.ipynb
+++ b/Abgabe1/sheet01.ipynb
@@ -21,7 +21,7 @@
    "id": "9f8967b8",
    "metadata": {},
    "source": [
-    "**PLEASE INDICATE ALL AUTHORS OF THE SUBMISSION IN THIS FIELD**"
+    "**Fynn Jonathan Rühlemann, Dennis Schielke, Toby Oderinlo, Mike Uhrich**"
    ]
   },
   {
