--- a/Abgabe2/sheet02.ipynb
+++ b/Abgabe2/sheet02.ipynb
@@ -765,11 +765,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e16bd57d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cluster 1 Mean Feature Values:\n",
+      "num_forum_postings: 0.22\n",
+      "num_questions: 0.00\n",
+      "num_messages: 0.00\n",
+      "num_completed_tasks: 0.00\n",
+      "points_exercise_1: 0.00\n",
+      "points_exercise_2: 0.00\n",
+      "points_exercise_3: 0.00\n",
+      "points_exercise_4: 0.00\n",
+      "points_exercise_5: 0.00\n",
+      "\n",
+      "Cluster 2 Mean Feature Values:\n",
+      "num_forum_postings: 0.08\n",
+      "num_questions: 0.02\n",
+      "num_messages: 0.04\n",
+      "num_completed_tasks: 0.10\n",
+      "points_exercise_1: 0.94\n",
+      "points_exercise_2: 0.93\n",
+      "points_exercise_3: 0.94\n",
+      "points_exercise_4: 0.93\n",
+      "points_exercise_5: 0.94\n",
+      "\n",
+      "Cluster 3 Mean Feature Values:\n",
+      "num_forum_postings: 0.00\n",
+      "num_questions: 0.00\n",
+      "num_messages: 0.00\n",
+      "num_completed_tasks: 0.78\n",
+      "points_exercise_1: 0.17\n",
+      "points_exercise_2: 0.11\n",
+      "points_exercise_3: 0.33\n",
+      "points_exercise_4: 0.92\n",
+      "points_exercise_5: 0.38\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = np.array(X)\n",
+    "\n",
+    "for cluster_label in np.unique(clusterGaussian):\n",
+    "    # Use boolean indexing to get cluster data\n",
+    "    cluster_data = X[clusterGaussian == cluster_label, :]\n",
+    "\n",
+    "    # Calculate mean feature values for the current cluster\n",
+    "    mean_values = np.mean(cluster_data, axis=0)\n",
+    "\n",
+    "    # Print the results\n",
+    "    print(f\"\\nCluster {cluster_label + 1} Mean Feature Values:\")\n",
+    "    for feature, mean_value in zip(features, mean_values):\n",
+    "        print(f\"{feature}: {mean_value:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
