--- a/Abgabe3/sheet03.ipynb
+++ b/Abgabe3/sheet03.ipynb
@@ -1136,7 +1136,9 @@
    "id": "c8668d55",
    "metadata": {},
    "source": [
-    "**ANSWER:** "
+    "**ANSWER:** \n",
+    "\n",
+    "The first plot is clustering at the latent value of 1, whereas the second plot is more spread and clusters around 2 points (around 0.4 and 0.8 from the latent information.)"
    ]
   }
  ],
