added task 7 to exercise 4

--- a/Abgabe4/sheet04.ipynb
+++ b/Abgabe4/sheet04.ipynb
@@ -462,7 +462,7 @@
    "id": "fad93bca",
    "metadata": {},
    "source": [
-    "**ANSWER:** "
+    "**ANSWER:** It might be that the model has problems adapting to long term dependencies and training the data can lead to unexpected drops of success probabilities. This is the case for many ML models and is a common thing since having a model that predicts everything right is just not a good model and most likely some overfitted model."
    ]
   },
   {
@@ -1028,7 +1028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
